--- a/agentic-workspace/package.json
+++ b/agentic-workspace/package.json
@@ -7,10 +7,7 @@
     "test": "jest",
     "lint": "eslint .",
     "format": "prettier --write .",
-    "validate": "node scripts/validate-configs.js",
-    "server": "node server/index.js",
-    "dev": "concurrently \"npm run server\" \"cd ui && npm run dev\"",
-    "build:ui": "cd ui && npm run build"
+    "validate": "node scripts/validate-configs.js"
   },
   "keywords": [
     "ai",
@@ -29,12 +26,7 @@
   "dependencies": {
     "ajv": "^8.12.0",
     "dotenv": "^16.3.1",
-    "js-yaml": "^4.1.0",
-    "express": "^4.18.2",
-    "ws": "^8.14.2",
-    "cors": "^2.8.5",
-    "chokidar": "^3.5.3",
-    "concurrently": "^8.2.2"
+    "js-yaml": "^4.1.0"
   },
   "engines": {
     "node": ">=18.0.0",
